# rust-downloader

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: rust.yml
.kiro/specs/multi-browser-cookie-support/: design.md  requirements.md  tasks.md
src/: browser.rs  cookies.rs  main.rs  test.rs
tests/: integration_tests.rs
