[package]
name = "download"
version = "0.2.3"
edition = "2024"

[profile.release-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
content_disposition = { version = "0.4.0" }
cookie = { version = "0.18.1", features = ["private", "secure"] }
cookie_store = { version = "0.21.1" }
dirs = "6.0.0"
env_logger = "0.11.0"
futures = "0.3.31"
indicatif = { version = "0.17.11"}
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.18", default-features = false, features = ["blocking", "cookies", "rustls-tls", "charset", "http2", "brotli", "gzip", "deflate", "zstd"] }
rookie = "0.5.6"
thiserror = "1.0"
tldextract = { version = "0.6.0"}
url = { version = "2.5.4"}
