[package]
name = "download"
version = "0.3.0"
edition = "2024"

[profile.release-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.51", features = ["cargo", "color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
config = "0.15.19"
content_disposition = { version = "0.4.0" }
cookie = { version = "0.18.1", features = ["private", "secure"] }
cookie_store = { version = "0.22.0" }
dirs = "6.0.0"
env_logger = "0.11.0"
futures = "0.3.31"
indicatif = { version = "0.18.3"}
log = "0.4.28"
regex = "1.12.2"
reqwest = { version = "0.12.18", default-features = false, features = ["blocking", "cookies", "rustls-tls", "charset", "http2", "brotli", "gzip", "deflate", "zstd"] }
rookie = "0.5.6"
serde = { version = "1.0.228", features = ["serde_derive", "std", "derive"] }
thiserror = "2.0.17"
tldextract = { version = "0.6.0"}
url = { version = "2.5.7"}
xdg = "3.0.0"
